Bug 304299 - Dolphin launches multiple instances of a program when multiple files are selected
Summary: Dolphin launches multiple instances of a program when multiple files are sele...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 160827 309165 326642 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-30 20:38 UTC by gustavo
Modified: 2016-02-09 01:24 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
screenshot of the result (39.12 KB, image/jpeg)
2012-07-30 20:40 UTC, gustavo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gustavo 2012-07-30 20:38:34 UTC
Since upgraded to 4.8, Dolphin no longer arranges media files in a playlist, to be opened in a single instance of a program. For example, if you select 15 mp3s and press enter, it will open 15 Totem windows - all of them frozen - instead of a window with the 15 files queued. If, however, you select the same files, right-click and select "open with -> totem", it works as expected. 

Reproducible: Always

Steps to Reproduce:
1. Open Dolphin
2. Select multiple .mp3, .avi, .jpg
3. Press Enter
Actual Results:  
A flood of nonresponsive new windows.

Expected Results:  
A single window with the selected files queued.

It seems to be a regression, since this exact behaviour figured in 4.4 and was fixed in 4.6, if I recall correctly. And seems somewhat similar to bug 265747, in which I have already commented, but as the similarities I've noticed are described in Peter Penz's response and not in the report itself, I'm filing a new report due to being unsure. My apologies if I am indeed duplicating.
Comment 1 gustavo 2012-07-30 20:40:50 UTC
Created attachment 72838 [details]
screenshot of the result
Comment 2 Jekyll Wu 2012-08-11 04:31:08 UTC
(In reply to comment #2)
> For example, if you select
> 15 mp3s and press enter, it will open 15 Totem windows - all of them frozen
> - instead of a window with the 15 files queued. If, however, you select the
> same files, right-click and select "open with -> totem", it works as
> expected. 

Reproduciable in KDE SC 4.9.0 . 

totem.desktop contains "Exec=totem %U", so it supports muitiple arguments. It is strange that kind of problem does not exist when trying .txt files and gedit (which uses Exec=gedit %U)
Comment 3 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:51 UTC
Resetting assignee to default as per bug #305719
Comment 4 Jekyll Wu 2012-10-29 22:25:27 UTC
*** Bug 309165 has been marked as a duplicate of this bug. ***
Comment 5 Emmanuel Pescosta 2012-11-12 22:53:56 UTC
Review-Request: https://git.reviewboard.kde.org/r/107305/
Comment 6 Kai Uwe Broulik 2012-11-12 23:01:17 UTC
Some infos just FTR:
Using the Open With context menu works fine in all cases I tested. Select multiple JPEGs, choose Open With Gwenview, one Gwenview instance opens, displaying the selected files.
Pressing Enter instead, opens four Gwenview instances all showing a single image.

Other filetypes:
4 JPEG files: Enter =4x Gwenview, Open With = 1x Gwenview with virtual folder
4 PDFs: Enter = 4x Okular, Open With = 4x Okular
4 MP3s: Enter = 4x VLC player, Open With = 1x VLC with playlist
4 TXT files: Enter = 1x (!) Kate, Open With = 1x Kate

Here also same with text files, they open once in Kate
Comment 7 Emmanuel Pescosta 2012-12-13 21:54:42 UTC
Git commit e45a847d48e3b9e039f5657b696366aa7460cd6d by Emmanuel Pescosta.
Committed on 13/12/2012 at 22:54.
Pushed by emmanuelp into branch 'master'.

Fix Bug 304299 - Dolphin launches multiple instances of a program when multiple files are selected
REVIEW: 107305

M  +9    -0    dolphin/src/dolphinpart.cpp
M  +4    -0    dolphin/src/dolphinpart.h
M  +10   -0    dolphin/src/dolphinviewcontainer.cpp
M  +6    -0    dolphin/src/dolphinviewcontainer.h
M  +18   -13   dolphin/src/views/dolphinview.cpp
M  +6    -0    dolphin/src/views/dolphinview.h

http://commits.kde.org/kde-baseapps/e45a847d48e3b9e039f5657b696366aa7460cd6d
Comment 8 Christoph Feck 2012-12-14 16:17:58 UTC
Will this be backported for KDE 4.9.5? Please set the Version-Fixed-In field.
Comment 9 Frank Reininghaus 2012-12-16 18:56:20 UTC
It changes the behaviour, and it changes quite a bit of code. I think it's unlikely that there will be any problems, but I feel more comfortable if it gets some additional testing in the RCs.
Comment 10 Benni Hill 2013-04-14 00:39:33 UTC
*** Bug 160827 has been marked as a duplicate of this bug. ***
Comment 11 Frank Reininghaus 2013-10-26 17:01:51 UTC
*** Bug 326642 has been marked as a duplicate of this bug. ***
Comment 12 Serafina Weathers 2016-02-09 01:24:28 UTC
Good writing - Speaking of which , if your business are wanting to merge PDF or PNG files , my business partner saw a tool here <a href="http://www.altomerge.com/" >altomerge.com</a>.