Fix Bug 304299 - Dolphin launches multiple instances of a program when multiple files are selected

BUG: 304299
REVIEW: 107305